--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="en" class="scroll-smooth">
   <head>
+    <!-- icon  -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/favicon.ico" />
+    <link rel="icon" type="image/svg+xml" href="%BASE_URL%assets/izzul3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Font Poppins -->
@@ -10,10 +11,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     
-    <title>Ris Portofolio</title>
+    <title>Izzul Portfolio </title>
   </head>
-  <body class = "bg-zinc-900 text-white" id="home">
+    <body class="text-white bg-gradient-to-br from-[#090b12] via-[#0b0d18] to-[#0e1120]" id="home">
+
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="%BASE_URL%src/main.jsx"></script>
   </body>
 </html>
