--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- icon  -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/portfolio/assets/izzul3.png" />
+    <link rel="icon" type="image/png" href="/portfolio/assets/izzul3.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Font Poppins -->
